--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "minecraft-ui",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
+  },
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -15,5 +18,5 @@
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "iliketeaalot.github.io/minecraft-ui"
+  "homepage": "https://iliketeaalot.github.io/minecraft-ui"
 }
